# tinehttpd

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  altnet.c  config.h  config.h.in  config.status  configure  configure.ac  gnuindent  httpd.c  httpd.cc  missing
htdocs/: index.html
src/htdocs/: Makefile.am  Makefile.in  altnet.c
src/httpd/: Makefile.am  Makefile.in  event.cc  event.h  httpd.cc  protocol.cc
src/httpd/.deps/: httpd.Po
